--- a/examples/omnetpp_loadbalanced/CMakeLists.txt
+++ b/examples/omnetpp_loadbalanced/CMakeLists.txt
@@ -78,6 +78,7 @@ if(TARGET OmnetPP::main)
   # Use modern CMake targets if available
   target_link_libraries(LoadBalancedSystem PRIVATE
       OmnetPP::main
+      OmnetPP::cmdenv
       OmnetPP::envir
       OmnetPP::sim
   )
@@ -91,5 +92,9 @@ else()
   target_include_directories(LoadBalancedSystem PRIVATE
       ${OMNETPP_INCLUDE_DIRS}
       ${CMAKE_CURRENT_SOURCE_DIR}
+  )
+  # Ensure shared libraries are linked properly
+  target_link_options(LoadBalancedSystem PRIVATE
+      -Wl,--no-as-needed
   )
 endif()
