--- a/examples/omnetpp_pubsub/CMakeLists.txt
+++ b/examples/omnetpp_pubsub/CMakeLists.txt
@@ -77,6 +77,7 @@ if(TARGET OmnetPP::main)
   # Use modern CMake targets if available
   target_link_libraries(PubSubNetwork PRIVATE
       OmnetPP::main
+      OmnetPP::cmdenv
       OmnetPP::envir
       OmnetPP::sim
   )
@@ -90,5 +91,9 @@ else()
   target_include_directories(PubSubNetwork PRIVATE
       ${OMNETPP_INCLUDE_DIRS}
       ${CMAKE_CURRENT_SOURCE_DIR}
+  )
+  # Ensure shared libraries are linked properly
+  target_link_options(PubSubNetwork PRIVATE
+      -Wl,--no-as-needed
   )
 endif()
